--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
         <!---Menu and socials-->
 
-        <div class="flex flex-col-items-center justify flex-1 mb-10
+        <div class="flex flex-col-items-center justify-between flex-1 mb-10
         space-y-6 md:flex-row md:mb:0 md:space-y-0 text-grayishBlue">
           <!---Menus-->
           <div
